add discord route
